# pocket-tts-csharp

./: .gitignore  BUILD_CSHARP.md  Cargo.toml  Dockerfile.csharp  README.md
.bench_tmp/: results_1.md  results_2.md
.github/workflows/: ci.yml
candle/: Cargo.toml  README.md  sdpa_check.rs
candle/crates/pocket-tts/: Cargo.toml
candle/crates/pocket-tts-bindings/: Cargo.toml  README.md  pyproject.toml  test_bindings.py
candle/crates/pocket-tts-bindings/src/: lib.rs
candle/crates/pocket-tts/examples/: bench_sdpa.rs  (+2 more)
crates/pocket-tts-bindings/: Cargo.toml
crates/pocket-tts-cli/: Cargo.toml
crates/pocket-tts-cli/src/: main.rs
crates/pocket-tts-cli/tests/: base64_tests.rs  server_tests.rs  stream_tests.rs
crates/pocket-tts-cli/web/: package.json  vite.config.ts
crates/pocket-tts-csharp/: Cargo.toml
crates/pocket-tts-csharp/src/: lib.rs
crates/pocket-tts/src/: tts_model.rs
crates/pocket-tts/tests/: integration_tests.rs  parity_tests.rs
csharp/: PocketTTS.sln
csharp/PocketTTS/: AudioBufferHanlde.cs  Helpers.cs  ModelHandle.cs  ModelStateHandle.cs  NativeApi.cs  PocketTTS.csproj  StreamControlCode.cs
csharp/PocketTTS.Example/: PocketTTS.Example.csproj  Program.cs
csharp/PocketTTS/Abstractions/: IPocketTtsInferenceService.cs
csharp/PocketTTS/Inference/: JobBase.cs  PocketTtsInferenceService.cs  RegularJob.cs  StreamingJob.cs
docs/: serve.md
manual-verification/: perf-ttfa-template.md  wasm-ui-verification-template.md
scripts/: build-csharp-docker.ps1  build-csharp-docker.sh  build-csharp.ps1  build-csharp.sh  pack-nuget.ps1  pack-nuget.sh
(+23 files in other folders)
