[package]
name = "pocket-tts-csharp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "C FFI bindings for Pocket TTS library"

[lib]
crate-type = ["cdylib"]

[dependencies]
pocket-tts = { path = "../pocket-tts" }
num_enum = "0.7"
candle-core.workspace = true
anyhow.workspace = true
