[package]
name = "pocket-tts-bindings"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pocket_tts_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
pocket-tts = { path = "../pocket-tts" }
anyhow = "1.0"
candle-core = "0.9.1" 
